--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
   <section id="resume">
     <h2>Resume</h2>
-    <p><a href="PDFs/Keagan Hansen Resume.pdf" download>Download My Resume (PDF)</a></p> <!-- Update resume contents -->
+    <p><a href="PDFs/Keagan Hansen Resume.pdf" download>Download My Resume (PDF)</a></p> <!-- Update resume contents (PDF related) -->
   </section>
 
   <footer>
