--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <p>Feel free to reach out via email at <a href="mailto:keaganhansen@unomaha.edu">keaganhansen@unomaha.edu</a></p>
     <p>Connect with me on <a href="https://www.linkedin.com/in/keagan-hansen-994596333/" target="_blank">LinkedIn</a> or check out my <a href="https://github.com/KeaganBaller" target="_blank">GitHub</a>.</p>
 
-    <form action="process.php" method="post">
+    <form action="process.php" method="post"> <!-- Contact button not functional yet -->
       <label for="name">Name:</label>
       <input type="text" id="name" name="name" required />
 
@@ -121,7 +121,7 @@
 
   <section id="resume">
     <h2>Resume</h2>
-    <p><a href="PDFs/Keagan Hansen Resume.pdf" download>Download My Resume (PDF)</a></p> <!-- Update resume contents (PDF related) -->
+    <p><a href="PDFs/Keagan Hansen Resume.pdf" download>Download My Resume (PDF)</a></p>
   </section>
 
   <footer>
