--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
     </ul>
 </section>
 
+<div id="hoverArrow" class="arrow-tooltip hidden">  <!-- Baller arrow -->
+  <span class="arrow"></span>
+  Hover over me!
+</div>
 
   <section id="projects">
     <h2>Projects</h2>
@@ -105,7 +109,7 @@
     <p>Feel free to reach out via email at <a href="mailto:keaganhansen@unomaha.edu">keaganhansen@unomaha.edu</a></p>
     <p>Connect with me on <a href="https://www.linkedin.com/in/keagan-hansen-994596333/" target="_blank" >LinkedIn</a> or check out my <a class="rainbow-hyperlink" href="https://github.com/KeaganBaller" target="_blank">GitHub</a>.</p>
 
-    <form action="process.php" method="post"> <!-- Not functional yet -->
+    <form action="process.php" method="post">  <!-- Not functional yet -->
       <label for="name">Name:</label>
       <input type="text" id="name" name="name" required />
 
