--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
   <section id="about">
     <h2>About Me</h2>
     <p>
-      Hello. My name is Keagan Hansen, and this is my website.
-      This has been meticulously crafted with my rapid-fire WPM typing skills, developed from cranking 90s in Fortnite.
+      Motivated Software Engineering student with a strong foundation in programming, problem-solving, and
+      system design. Gained hands-on experience through coursework and internships, developing practical skills
+      in troubleshooting, automation, and backend development. Eager to learn, contribute, and grow in a
+      collaborative technical environment
 
     </p>
   </section>
@@ -52,7 +54,7 @@
     </ul>
 </section>
 
-<div id="hoverArrow" class="arrow-tooltip hidden">  <!-- Baller arrow -->
+<div id="hoverArrow" class="arrow-tooltip hidden">
   <span class="arrow"></span>
   Hover over me!
 </div>
@@ -67,9 +69,9 @@
       <a href="https://github.com/KeaganBaller/Progress" target="_blank">View Code</a>
     </article>
     <article class="project">
-      <h3>This website</h3>
+      <h3>This website *WIP*</h3>
       <p>
-        Utilizing HTML and CSS to develop a page about me.
+        Utilizing HTML, CSS, and JavaScript to develop a page about me.
       </p>
       <a href="https://github.com/KeaganBaller/my_website" target="_blank">View Code</a>
     </article>
@@ -79,19 +81,16 @@
     <h2>Experience</h2>
     <div class="job">
       <h3>Startup Intern</h3>
-      <p><em>November 2024 – Present</em></p>
-      <ul style="list-style-position: inside;">
-        <li></li>
-        <li></li>
-      </ul>
+      <p style="margin-bottom: 0.5rem;"><em>November 2024 – Present</em></p>
+      <p>Working at a startup and currently developing skills in AI, web development, software architecture, and
+        various programming languages.</p>
     </div>
     <div class="job">
-      <h3>IT Intern</h3>
-      <p><em>August 2024 – Present</em></p>
-      <ul style="list-style-position: inside;">
-        <li></li>
-        <li></li>
-      </ul>
+      <h3>IT Intern - The H+H Group</h3>
+      <p style="margin-bottom: 0.5rem;"><em>August 2024 – Present</em></p>
+      <p> Working as an IT intern, troubleshooting hardware and software issues, assisting with system maintenance,
+          and supporting end-users. Gained hands-on experience with networking, security protocols, and ticket
+          management while improving efficiency in daily operations.</p>
     </div>
   </section>
 
@@ -109,7 +108,7 @@
     <p>Feel free to reach out via email at <a href="mailto:keaganhansen@unomaha.edu">keaganhansen@unomaha.edu</a></p>
     <p>Connect with me on <a href="https://www.linkedin.com/in/keagan-hansen-994596333/" target="_blank" >LinkedIn</a> or check out my <a class="rainbow-hyperlink" href="https://github.com/KeaganBaller" target="_blank">GitHub</a>.</p>
 
-    <form action="process.php" method="post">  <!-- Not functional yet -->
+    <form action="process.php" method="post"> <!-- Not functional yet -->
       <label for="name">Name:</label>
       <input type="text" id="name" name="name" required />
 
