--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
   <section id="contact">
     <h2>Contact Me</h2>
     <p>Feel free to reach out via email at <a href="mailto:keaganhansen@unomaha.edu">keaganhansen@unomaha.edu</a></p>
-    <p>Connect with me on <a href="https://www.linkedin.com/in/keagan-hansen-994596333/" target="_blank" >LinkedIn</a> or check out my <a class="rainbow-hyperlink" href="https://github.com/KeaganBaller" target="_blank">GitHub</a>.</p>
+    <p>Connect with me on <a href="https://www.linkedin.com/in/keagan-hansen/" target="_blank" >LinkedIn</a> or check out my <a class="rainbow-hyperlink" href="https://github.com/KeaganBaller" target="_blank">GitHub</a>.</p>
 
     <form action="process.php" method="post"> <!-- Not functional yet -->
       <label for="name">Name:</label>
