--- a/index.html
+++ b/index.html
@@ -62,21 +62,19 @@
   <section id="projects">
     <h2>Projects</h2>
     <article class="project">
-      <h3>Raytracing Simulation in C *WIP*</h3>
-      <p>
-        Used SDL2 to visualize a simple ray tracing mechanism.
-      </p>
-      <a href="https://github.com/KeaganBaller/Progress" target="_blank">View Code</a>
-    </article>
-    <article class="project">
-      <h3>This website *WIP*</h3>
-      <p>
-        Utilizing HTML, CSS, and JavaScript to develop a page about me.
-      </p>
-      <a href="https://github.com/KeaganBaller/my_website" target="_blank">View Code</a>
-    </article>
-  </section>
-
+      <div class="project-text">
+        <h3>2D Ray Tracing Simulation</h3>
+        <p style="margin-bottom: 1.5rem;">Used SDL2 and C to visualize a simple ray tracing mechanism.</p>
+        <a href="https://github.com/KeaganBaller/Progress" target="_blank">View Code</a>
+      </div>
+      <div class="project-video">
+        <video width="192" height="108" autoplay loop muted>
+          <source src="videos/Raytracing demo.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+        </video>
+      </div>
+    </article>  
+    </section>
   <section id="experience">
     <h2>Experience</h2>
     <div class="job">
