--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       <label for="message">Message:</label>
       <textarea id="message" name="message" required></textarea>
 
-      <button type="submit">Send</button>
+      <button type="submit">Send - *Doesn't work yet*</button>
     </form>
   </section>
 
