--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       Motivated Software Engineering student with a strong foundation in programming, problem-solving, and
       system design. Gained hands-on experience through coursework and internships, developing practical skills
       in troubleshooting, automation, and backend development. Eager to learn, contribute, and grow in a
-      collaborative technical environment
+      collaborative technical environment.
 
     </p>
   </section>
@@ -78,26 +78,24 @@
   <section id="experience">
     <h2>Experience</h2>
     <div class="job">
-      <h3>Startup Intern</h3>
+      <h3>Software Engineering Intern</h3>
       <p style="margin-bottom: 0.5rem;"><em>November 2024 – Present</em></p>
       <p>Working at a startup and currently developing skills in AI, web development, software architecture, and
         various programming languages.</p>
     </div>
     <div class="job">
       <h3>IT Intern - The H+H Group</h3>
-      <p style="margin-bottom: 0.5rem;"><em>August 2024 – Present</em></p>
-      <p> Working as an IT intern, troubleshooting hardware and software issues, assisting with system maintenance,
-          and supporting end-users. Gained hands-on experience with networking, security protocols, and ticket
-          management while improving efficiency in daily operations.</p>
+      <p style="margin-bottom: 0.5rem;"><em>August 2024 – May 2025</em></p>
+      <p>Troubleshot hardware and software issues, assisted with system maintenance, and created programs to help the team with repetitive tasks.
+        Gained hands-on experience with networking, security protocols, and ticket management while improving efficiency in daily operations.</p>
     </div>
   </section>
 
   <section id="education">
     <h2>Education</h2>
     <div class="school">
-      <h3>University of Nebraska Omaha, Computer Science & AI</h3>
+      <h3>University of Nebraska Omaha - Computer Science & AI</h3>
       <p><em><span style="font-weight: bold;">Expected Graduation:</span> April 2028</em></p>
-      <p><span style="font-weight: bold;">Relevant Coursework:</span> *n/a*</p>
     </div>
   </section>
 
@@ -116,7 +114,7 @@
       <label for="message">Message:</label>
       <textarea id="message" name="message" required></textarea>
 
-      <button type="submit">Send - *Doesn't work yet*</button>
+      <button type="submit"><b>Send - *Doesn't work yet*</b></button>
     </form>
   </section>
 
