--- a/index.html
+++ b/index.html
@@ -27,10 +27,8 @@
   <section id="about">
     <h2>About Me</h2>
     <p>
-      Motivated Software Engineering student with a strong foundation in programming, problem-solving, and
-      system design. Gained hands-on experience through coursework and internships, developing practical skills
-      in troubleshooting, automation, and backend development. Eager to learn, contribute, and grow in a
-      collaborative technical environment.
+      Ambitious student at University of Nebraska Omaha pursuing a degree in Computer Science and Artificial Intelligence. 
+      I'm seeking experience in the field of software engineering.
 
     </p>
   </section>
