--- a/index.html
+++ b/index.html
@@ -52,10 +52,6 @@
     </ul>
 </section>
 
-<div id="hoverArrow" class="arrow-tooltip hidden">
-  <span class="arrow"></span>
-  Hover over me!
-</div>
 
   <section id="projects">
     <h2>Projects</h2>
@@ -76,9 +72,14 @@
   <section id="experience">
     <h2>Experience</h2>
     <div class="job">
-      <h3>Software Engineering Intern</h3>
+      <h3>Teaching Assistant - UNL</h3>
+      <p style="margin-bottom: 0.5rem;"><em>August 2025 – Present</em></p>
+      <p></p>
+    </div>
+    <div class="job">
+      <h3>Software Engineering Intern - Platometer</h3>
       <p style="margin-bottom: 0.5rem;"><em>November 2024 – Present</em></p>
-      <p>Working at a startup and currently developing skills in AI, web development, software architecture, and
+      <p>Currently developing skills in AI, web development, software architecture, and
         various programming languages.</p>
     </div>
     <div class="job">
