--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </nav>
     <section id="home" class="hero">
       <h1>Keagan Hansen</h1>
-      <p>Aspiring Software Developer & Engineer</p>
+      <p>Professional Nerd</p>
       <img src="images/razerman.webp" alt="Profile Photo of Keagan Hansen" width="20%" height="20%"/>
     </section>
   </header>
@@ -73,20 +73,28 @@
     <h2>Experience</h2>
     <div class="job">
       <h3>Teaching Assistant - UNL</h3>
-      <p style="margin-bottom: 0.5rem;"><em>August 2025 – Present</em></p>
-      <p></p>
+      <p style="margin-bottom: 0.5rem;"><em>August 2025 - December 2025</em></p>
+      <p>• Opportunity to TA for ECEN 155E (Computer Science I), a class of 57 students that focuses on C 
+programming fundamentals. 
+• As a team of 3 TAs, led two weekly lab sessions, providing concept clarification and hands-on 
+debugging. 
+• Graded 2 lab assignments weekly, along with occasional quizzes. Provided feedback on labs to help 
+students improve code. 
+• Coordinated with the professor and other TAs to run labs and assessments. Also got to lead a couple in
+lecture code-alongs on structs and file I/O. </p>
     </div>
     <div class="job">
       <h3>Software Engineering Intern - Platometer</h3>
-      <p style="margin-bottom: 0.5rem;"><em>November 2024 – Present</em></p>
-      <p>Currently developing skills in AI, web development, software architecture, and
-        various programming languages.</p>
+      <p style="margin-bottom: 0.5rem;"><em>December 2024 – Present</em></p>
+      <p>• Currently developing skills in AI, web development, software architecture, and various programming 
+languages. </p>
     </div>
     <div class="job">
       <h3>IT Intern - The H+H Group</h3>
       <p style="margin-bottom: 0.5rem;"><em>August 2024 – May 2025</em></p>
-      <p>Troubleshot hardware and software issues, assisted with system maintenance, and created programs to help the team with repetitive tasks.
-        Gained hands-on experience with networking, security protocols, and ticket management while improving efficiency in daily operations.</p>
+      <p>• Troubleshot hardware and software issues, assisted with system maintenance, and created programs to 
+help the team with repetitive tasks. 
+• Worked with networking, security protocols, and ticket management.</p>
     </div>
   </section>
 
@@ -123,7 +131,7 @@
   </section>
 
   <footer>
-    <p>© 2025 Keagan Hansen. All rights reserved.</p>
+    <p>© 2025 Keagan Hansen.</p>
   </footer>
 </body>
 </html>
@@ -131,3 +139,4 @@
 <script src="main.js"></script>
 </body>
 </html>
+
