--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <h2>About Me</h2>
     <p>
       Ambitious student at University of Nebraska Omaha pursuing a degree in Computer Science and Artificial Intelligence. 
-      I'm seeking experience in the field of software engineering.
+      I like building things, and I'm seeking experience in the field of software engineering.
 
     </p>
   </section>
@@ -75,13 +75,16 @@
       <h3>Teaching Assistant - UNL</h3>
       <p style="margin-bottom: 0.5rem;"><em>August 2025 - December 2025</em></p>
       <p>• Opportunity to TA for ECEN 155E (Computer Science I), a class of 57 students that focuses on C 
-programming fundamentals. 
-• As a team of 3 TAs, led two weekly lab sessions, providing concept clarification and hands-on 
-debugging. 
-• Graded 2 lab assignments weekly, along with occasional quizzes. Provided feedback on labs to help 
-students improve code. 
-• Coordinated with the professor and other TAs to run labs and assessments. Also got to lead a couple in
+programming fundamentals.</p>
+      <p>• As a team of 3 TAs, led two weekly lab sessions, providing concept clarification and hands-on 
+debugging.</p>
+      <p>• Graded 2 lab assignments weekly, along with occasional quizzes. Provided feedback on labs to help 
+students improve code.</p>
+      <p>• Coordinated with the professor and other TAs to run labs and assessments. Also got to lead a couple in
 lecture code-alongs on structs and file I/O. </p>
+ 
+ 
+
     </div>
     <div class="job">
       <h3>Software Engineering Intern - Platometer</h3>
@@ -93,8 +96,8 @@ languages. </p>
       <h3>IT Intern - The H+H Group</h3>
       <p style="margin-bottom: 0.5rem;"><em>August 2024 – May 2025</em></p>
       <p>• Troubleshot hardware and software issues, assisted with system maintenance, and created programs to 
-help the team with repetitive tasks. 
-• Worked with networking, security protocols, and ticket management.</p>
+help the team with repetitive tasks.</p>
+      <p>• Worked with networking, security protocols, and ticket management.</p>
     </div>
   </section>
 
@@ -139,4 +142,5 @@ help the team with repetitive tasks.
 <script src="main.js"></script>
 </body>
 </html>
+
 
